<resources>
    <string name="app_name">DriveAngel</string>
    <string name="dr_drive">DriveAngel</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="title_onboarding_1">Welcome to DriveAngel App !</string>
    <string name="description_onboarding_1">A one stop solution for your 360 degree car care. Dr. \'D\' is committed to serve the patient car and provide world class care</string>

    <string name="title_onboarding_2">Your struggle is Dr. D\'s now</string>
    <string name="description_onboarding_2">D has combined the offline service providers with technology that empowers you with ability to provide best for your drive</string>

    <string name="title_onboarding_3">Dr. D is with you 24*7</string>
    <string name="description_onboarding_3">Imagine struggling with a stalled drive in middle of nowhere, just inform D and rest will be taken care of for you</string>
    <string name="test_desc">Test desc</string>
    <string name="test_title">Test title</string>
    <string name="ConnectionTimeout">Connection timeout</string>
    <string name="Timeout">Timeout</string>
    <string name="InternetCheck">Please check your internet connection</string>
    <string name="TechnicalError">Technical error, please try later</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="license_expiry">LICENSE EXPIRY</string>
    <string name="zip_code">ZIP-CODE</string>
    <string name="address">ADDRESS</string>
    <string name="owner">OWNER</string>
    <string name="workshop_name">NAME</string>
    <string name="workshop_detail_label">WORKSHOP DETAILS</string>
    <string name="search">search</string>
    <string name="refresh">refresh</string>
    <string name="enter_mobile_no">Mobile</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">OTP</string>
    <string name="save">Save</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="just_to_know_you_better">Just to know you better</string>

</resources>