<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="10dp"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".ui.registration.MobileNumberLoginNav">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_height="0dp"
        android:layout_weight="2.6"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/enter_mobile_lottie" />

    <EditText
        android:id="@+id/et_phone_no"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxLength="10"
        android:layout_weight="0.3"
        android:layout_margin="10dp"
        android:hint="@string/enter_mobile_no"
        android:inputType="phone"
        android:textAlignment="center"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btn_getOtp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/app_theme_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/get_otp"
        android:textColor="@color/white" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.3"
    android:textAlignment="center"
    android:layout_margin="10dp"
    android:text="@string/please_enter_your_phone_number"
    android:textSize="16sp"/>

</LinearLayout>
