<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/workshop_detail_dialog"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <!--Workshop name-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:shadowColor="#6BFFFFFF"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/workshop_detail_label"
            android:textColor="#39393A"
            android:textSize="15sp"
            android:textStyle="bold" />
        <!--Workshop name-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/workshop_name_border"
            android:padding="5dp"
            android:text="@string/workshop_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_workshop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold" />
        <!--Workshop Owner-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/workshop_name_border"
            android:padding="5dp"
            android:text="@string/owner"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_workshop_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!--Workshop Address-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/workshop_name_border"
            android:padding="5dp"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_workshop_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold" />
        <!--Workshop ZIP code-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/workshop_name_border"
            android:padding="5dp"
            android:text="@string/zip_code"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_workshop_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold" />
        <!--Workshop License expiry data-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/workshop_name_border"
            android:padding="5dp"
            android:text="@string/license_expiry"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_workshop_license_expiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:text="facility_name"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</layout>